# gemini-live-rust

./: Cargo.toml  LICENSE  README.md
src/: main.rs
